[workspace]
members = [
    "autobuild",
    "xlang",
    "xlang/xlang_abi", "xlang/xlang_abi_macro",
    "xlang/xlang_struct", "xlang/xlang_targets",
    "xlang/xlang_host", "xlang/xlang_backend", "xlang/xlang_opt", 
    "xlang/xlang_frontend",
    "xlangtransparent",
    "lccc", "rust/lcrustc",
    "c", "xir", "rust", "rust/rlib",
    "codegen-x86","codegen-clever","codegen-w65",
    "lc-binutils/arch-ops", "lc-binutils/binfmt",
    "rust/interning-static-syms",
    "rust/rust_mir_macro",
]
exclude = []
resolver = "2"
