[workspace]
members = [
    "autobuild",
    "xlang",
    "xlang/xlang_abi",
    "xlang/xlang_abi_macro",
    "xlang/xlang_struct",
    "xlang/xlang_targets",
    "xlang/xlang_host",
    "xlang/xlang_backend",
    "xlang/xlang_opt",
    "xlang/xlang_frontend",
    "lccc",
    "frontend/rust/lcrustc",
    "frontend/c",
    "frontend/xir",
    "frontend/rust",
    "frontend/rust/rlib",
    "backend/codegen-x86",
    "backend/codegen-clever",
    "backend/codegen-w65",
    "lc-binutils/arch-ops",
    "lc-binutils/binfmt",
    "frontend/rust/interning-static-syms",
    "frontend/rust/rust_mir_macro",
]
exclude = []
resolver = "2"


[workspace.dependencies]
arch-ops = { path = "lc-binutils/arch-ops", version = "0.1.0" }
binfmt = { path = "lc-binutils/binfmt", version = "0.1.0" }
xlang = { path = "xlang" }
xlang_backend = { path = "xlang/xlang_backend" }
xlang_frontend = { path = "xlang/xlang_frontend" }
xlang_opt = { path = "xlang/xlang_opt" }
target-tuples = "0.5.5"
unicode-xid = "0.2.2"
lccc = { path = "lccc" }
bitflags = "2.6.0"
