[package]
name = "frontend-c"
version = "0.1.0"
edition = "2018"
license = "BSD-2-Clause-Patent"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xlang = {path="../xlang"}
xlang_struct = {path="../xlang/xlang_struct"}

[lib]
crate-type = ["cdylib"]
