[package]
name = "codegen-clever"
version = "0.1.0"
edition = "2021"
license = "BSD-2-Clause-Patent"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
arch-ops = {path="../lc-binutils/arch-ops", version="0.1.0", features=["clever"]}
binfmt = {path="../lc-binutils/binfmt", version="0.1.0", features=["all-formats", "clever"]}
xlang = {path="../xlang"}
xlang_struct = {path="../xlang/xlang_struct"}
xlang_backend = {path="../xlang/xlang_backend"}
target-tuples = "0.5.2"

[lib]
crate-type = ["cdylib"]

[package.metadata.'install-targets'.codegen_clever]
type = "shared"
install-dir = "<libdir>/lccc/xlang/plugins"