[package]
name = "lccc"
version = "0.1.0"
authors = ["Connor Horman <chorman64@gmail.com>"]
edition = "2021"
license = "BSD-2-Clause-Patent"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xlang = {path="../xlang"}
xlang_host = {path="../xlang/xlang_host"}
xlang_frontend = {path = "../xlang/xlang_frontend"}
target-tuples = "0.5.5"
temp-file = "0.1"
which = "4.2.4"

[build-dependencies]
install-dirs = {version="0.2.1", features=["serde"]}
serde = {version="1, <=1.0.171",features=["derive"]}
serde_derive = {version="<=1.0.171"}
toml = "0.5.8"
target-tuples = "0.5.5"
