[package]
name = "frontend-rust"
version = "0.1.0"
edition = "2021"
license = "BSD-2-Clause-Patent"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-xid = "0.2.2"
xlang = {path="../xlang"}
peekmore = "1.3.0"
lazy_static = "1"
interning-static-syms={path="interning-static-syms"}
rust_mir_macro={path="rust_mir_macro"}
defile = "0.2.0-rc1"

[lib]
crate-type = ["cdylib"]

[package.metadata.'install-targets'.frontend_rust]
type = "shared"
install-dir = "<libdir>/lccc/xlang/plugins"
