[package]
name = "frontend-xir"
version = "0.1.0"
edition = "2018"
license = "BSD-2-Clause-Patent"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xlang = {path="../xlang"}
xlang_struct = {path="../xlang/xlang_struct"}
unicode-xid = "0.2.2"
target-tuples = "0.5"
peekmore = "1.0.0"

[lib]
crate-type = ["cdylib"]
