[package]
name = "frontend-xir"
version = "0.1.0"
edition = "2021"
license = "BSD-2-Clause-Patent"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xlang = {path="../xlang"}
xlang_struct = {path="../xlang/xlang_struct"}
unicode-xid = "0.2.2"
xlang_frontend = {path="../xlang/xlang_frontend"}

[lib]
crate-type = ["cdylib"]

[package.metadata.'install-targets'.frontend_xir]
type = "shared"
install-dir = "<libdir>/lccc/xlang/plugins"
