[package]
name = "xlang"
version = "0.1.0"
authors = ["Connor Horman <chorman64@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
target-tuples = "0.4.1"
xlang_abi = {path="xlang_abi"}

[profiles.release]
debug=false

[lib]
crate-type=["dylib"]