[package]
name = "xlang"
version = "0.1.0"
authors = ["Connor Horman <chorman64@gmail.com>"]
edition = "2021"
license = "BSD-2-Clause-Patent"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
target-tuples = "0.5.5"
xlang_abi = {path="xlang_abi"}
xlang_struct = {path="xlang_struct"}
xlang_targets = {path="xlang_targets"}
xlang_host = {path="xlang_host"}
xlang_interface = {path="xlang_interface"}
fake-enum ="0.1"
