[package]
name = "transparent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xlang = {path="../xlang"}


[lib]
crate-type = ["cdylib"]

[package.metadata.'install-targets'.transparent]
type = "shared"
install-dir = "<libdir>/lccc/xlang/plugins"