[package]
name = "codegen-x86"
version = "0.1.0"
edition = "2021"
license = "BSD-2-Clause-Patent"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arch-ops = { workspace = true, features = ["x86"] }
binfmt = { workspace = true, features = ["all-formats", "x86"] }
xlang.workspace = true
xlang_backend.workspace = true
target-tuples.workspace = true

[lib]
crate-type = ["cdylib"]

[package.metadata.'install-targets'.codegen_x86]
type = "shared"
install-dir = "<libdir>/lccc/xlang/plugins"
