[package]
name = "libproc_macro"
version = "0.1.0"
authors = ["Connor Horman <chorman64@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libcore = {path ="../libcore"}
liballoc = {path = "../liballoc"}
libstd = {path = "../libstd"}

[lib]
crate-type=["dylib"]