[package]
name = "rlib"
version = "0.1.0"
authors = ["Connor Horman <chorman64@gmail.com>"]
edition = "2021"
license = "BSD-2-Clause-Patent"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = {version="1.7", features=["derive"]}
bitflags = "1.3"
binfmt = {path="../../lc-binutils/binfmt",features=["ar"]}
