[package]
name = "xlang_abi"
version = "0.1.0"
authors = ["Connor Horman <chorman64@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xlang_abi_macro = {path = "../xlang_abi_macro"}
xlang_host = {path="../xlang_host"}
