[package]
name = "xlang_abi"
version = "0.1.3"
authors = ["Connor Horman <chorman64@gmail.com>"]
edition = "2018"
license = "BSD-2-Clause-Patent"
description = """
ABI safe interfaces used by xlang
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xlang_host = {path="../xlang_host", version="0.1.1"}
