[package]
name = "xlang_abi"
version = "0.2.0"
authors = ["Connor Horman <chorman64@gmail.com>", "Ray Redondo <rdredondo@lcdev.xyz>"]
edition = "2021"
license = "BSD-2-Clause-Patent"
description = """
ABI safe interfaces used by xlang
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xlang_host = {path="../xlang_host", version="0.2"}

