[package]
name = "xlang_abi_macro"
version = "0.1.1"
authors = ["Connor Horman <chorman64@gmail.com>"]
edition = "2021"
license = "BSD-2-Clause-Patent"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version="1.0.75",features=["full"]}
quote = "1.0.9"
proc-macro2 = "1"

[lib]
proc-macro = true
