[package]
name = "xlang_backend"
version = "0.1.0"
edition = "2018"
license = "BSD-2-Clause-Patent"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xlang = {path=".."}
arch-ops = {path="../../arch-ops"}
binfmt = {path="../../binfmt"}
target-tuples = "0.5.7"
