[package]
name = "xlang_backend"
version = "0.1.0"
edition = "2021"
license = "BSD-2-Clause-Patent"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xlang = {path=".."}
arch-ops = {path="../../lc-binutils/arch-ops"}
binfmt = {path="../../lc-binutils/binfmt"}
target-tuples = "0.5.7"
