[package]
name = "xlang_host"
version = "0.2.0"
authors = ["Connor Horman <chorman64@gmail.com>"]
edition = "2021"
license = "BSD-2-Clause-Patent"
description = """
Interface for determining and using platform-specific properties of the host system
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-match = "0.2.1"

[build-dependencies]
