[package]
name = "xlang_interface"
version = "0.1.0"
authors = ["Connor Horman <chorman64@gmail.com>"]
edition = "2018"
license = "BSD-2-Clause-Patent"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xlang_abi = {path="../xlang_abi"}
xlang_targets = {path="../xlang_targets"}
xlang_host = {path="../xlang_host"}
rand = "0.8.5"
lazy_static = "1.3"

[lib]
crate-type=["cdylib"]

[package.metadata.'install-targets'.xlang_interface]
type = "shared"
