[package]
name = "xlang_interface"
version = "0.1.0"
authors = ["Connor Horman <chorman64@gmail.com>"]
edition = "2021"
license = "BSD-2-Clause-Patent"
description = """
Minimal cdylib that exposes interfaces to be shared by the xlang environment (backend, frontend, plugins, driver)
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xlang_abi = {path="../xlang_abi",version="0.2.0"}
xlang_targets = {path="../xlang_targets",version="0.2.0"}
xlang_host = {path="../xlang_host",version="0.2.0"}
lccc-siphash = "0.1"
lazy_static = "1.3"


[lib]
crate-type=["cdylib"]

[package.metadata.'install-targets'.xlang_interface]
type = "shared"
instal_dir="<libdir>"